--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,6 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
-    env:
-      API_KEY: ${{ secrets.VITE_API_KEY }}
-
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
@@ -20,6 +17,9 @@ jobs:
           npm install
           npm run lint
           npm run build
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
