--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,13 @@ jobs:
 
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
 
       - name: Install, lint, build 🔧
         run: |
@@ -18,11 +24,10 @@ jobs:
           npm run lint
           npm run build
         env:
-          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
-
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY}}
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+        uses: JamesIves/github-pages-deploy-action@4
         with:
           branch: gh-pages
           folder: build
