Install Tailwind with postcss & autoprefixer

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,6 +3,7 @@
   "bracketSameLine": false,
   "bracketSpacing": true,
   "jsxSingleQuote": false,
+  "plugins": ["prettier-plugin-tailwindcss"],
   "printWidth": 80,
   "proseWrap": "always",
   "semi": true,
