--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://yevhenchementsov.github.io/react-movies/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/react-movies/ && mv dist build",
+    "build": "vite build --base=/react-movies/ && mv dist build && cp build/index.html build/404.html",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prepare": "husky install"
