--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
       "assets/*": ["assets/*"],
       "components/*": ["components/*"],
       "hooks/*": ["hooks/*"],
-      "pages/*": ["pages/*"]
+      "pages/*": ["pages/*"],
+      "utils/*": ["utils/*"]
     }
   }
 }
